@@ -3,6 +3,9 @@ Revision history for Perl extension TOML::XS:
 0.02
 - Fix https://github.com/cktan/tomlc99/issues/52
   (Large TOML documents now decode MUCH faster!)
+- Improved test coverage
+- Documentation tweaks
+- Added benchmarks
 
 0.01 Sat 10 Apr 2021
 - Initial release
